# SDL_Trainings

./: README.md
SDL_Basic/source/engine/: engine.cpp  engine.h  state.h
SDL_Basic/source/test/: CMakeLists.txt  example.cpp  main.cpp
SDL_Behaviors_Pixels/: CMakeLists.txt  main.cpp
SDL_Bresenhams-Circle_Algorithm/: CMakeLists.txt  main.cpp
SDL_Bresenhams-Line_Algorithm/: CMakeLists.txt  main.cpp
SDL_DDA_Algorithm/: CMakeLists.txt  main.cpp
SDL_Effects_Pixels/: CMakeLists.txt  main.cpp
SDL_Game2D_Template/: README.md
SDL_Game2D_Template/source/engine/: CMakeLists.txt  README.md  engine.cpp  engine.h  engine2.cpp  engine2.h
SDL_Game2D_Template/source/engine/common/: CMakeLists.txt  smallToolBox.h  test.cpp
SDL_Game2D_Template/source/test/: CMakeLists.txt  example.cpp  example.h  main.cpp
SDL_Game2D_Template/source/top-down/: CMakeLists.txt  main.cpp  topDown2D.cpp  topDown2D.h
SDL_Game2D_Template/uml/: SDL_Game2D_Template.uxf
SDL_GameOfLife_Algorithm/: CMakeLists.txt  main.cpp
SDL_MidPoint-Circle_Algorithm/: CMakeLists.txt  main.cpp
SDL_Move_Pixels/: CMakeLists.txt  main.cpp
SDL_SimplePaint/: CMakeLists.txt  main.cpp
